--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,10 @@
               <a href="./index.html" class="header-link link"> Studio </a>
             </li>
             <li class="header-item">
-              <a href="./portfolio.html" class="header-link link">
+              <a
+                href="./portfolio.html"
+                class="header-link current-underline link"
+              >
                 Portfolio
               </a>
             </li>
@@ -73,12 +76,21 @@
           </ul>
           <ul class="list project-cards-list">
             <li class="project-cards-list-item">
-              <a href="" class="link project-cards-list-item-link"
-                ><img
-                  src="./images/screenshots.jpg"
-                  alt="Banking-App-Interface-Concept"
-                  width="360"
-                />
+              <a href="" class="link project-cards-list-item-link">
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/screenshots.jpg"
+                    alt="Banking-App-Interface-Concept"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">
                     Banking App Interface Concept
@@ -88,8 +100,17 @@
               >
             </li>
             <li class="project-cards-list-item">
-              <a href="" class="link project-cards-list-item-link"
-                ><img src="./images/nfc.jpg" alt="NFC-using" width="360" />
+              <a href="" class="link project-cards-list-item-link">
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img src="./images/nfc.jpg" alt="NFC-using" width="360" />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">Cashless Payment</h2>
                   <p class="section-item-paragraph">Marketing</p>
@@ -98,11 +119,20 @@
             </li>
             <li class="project-cards-list-item">
               <a href="" class="link project-cards-list-item-link">
-                <img
-                  src="./images/laptop-phone.jpg"
-                  alt="Laptop-and-phone-screens"
-                  width="360"
-                />
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/laptop-phone.jpg"
+                    alt="Laptop-and-phone-screens"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">Meditation App</h2>
                   <p class="section-item-paragraph">App</p>
@@ -111,7 +141,20 @@
             </li>
             <li class="project-cards-list-item">
               <a href="" class="link project-cards-list-item-link">
-                <img src="./images/driver.jpg" alt="Taxi-Driver" width="360" />
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/driver.jpg"
+                    alt="Taxi-Driver"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">Taxi Service</h2>
                   <p class="section-item-paragraph">Marketing</p>
@@ -120,11 +163,20 @@
             </li>
             <li class="project-cards-list-item">
               <a href="" class="link project-cards-list-item-link">
-                <img
-                  src="./images/screen-illustrations.jpg"
-                  alt="Phone-screen"
-                  width="360"
-                />
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/screen-illustrations.jpg"
+                    alt="Phone-screen"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">Screen Illustrations</h2>
                   <p class="section-item-paragraph">Design</p>
@@ -133,11 +185,20 @@
             </li>
             <li class="project-cards-list-item">
               <a href="" class="link project-cards-list-item-link">
-                <img
-                  src="./images/girl-with-phone.jpg"
-                  alt="Girl-on-online-courses"
-                  width="360"
-                />
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/girl-with-phone.jpg"
+                    alt="Girl-on-online-courses"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">Online Courses</h2>
                   <p class="section-item-paragraph">Marketing</p>
@@ -146,11 +207,20 @@
             </li>
             <li class="project-cards-list-item">
               <a href="" class="link project-cards-list-item-link">
-                <img
-                  src="./images/instagram-stories.jpg"
-                  alt="Instagram-Stories"
-                  width="360"
-                />
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/instagram-stories.jpg"
+                    alt="Instagram-Stories"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">
                     Instagram Stories Concept
@@ -161,11 +231,20 @@
             </li>
             <li class="project-cards-list-item">
               <a href="" class="link project-cards-list-item-link">
-                <img
-                  src="./images/organic-food.jpg"
-                  alt="Organic-Food"
-                  width="360"
-                />
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/organic-food.jpg"
+                    alt="Organic-Food"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">Organic Food</h2>
                   <p class="section-item-paragraph">Web Site</p>
@@ -174,11 +253,20 @@
             </li>
             <li class="project-cards-list-item">
               <a href="" class="link project-cards-list-item-link">
-                <img
-                  src="./images/coffee.jpg"
-                  alt="Cup-of-Coffee"
-                  width="360"
-                />
+                <div class="overlay-container">
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                  <img
+                    src="./images/coffee.jpg"
+                    alt="Cup-of-Coffee"
+                    width="360"
+                  />
+                </div>
                 <div class="cards-content">
                   <h2 class="project-cards-item-name">Fresh Coffee</h2>
                   <p class="section-item-paragraph">Web Site</p>
