--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a href="./index.html" class="header-link link"> Studio </a>
+              <a href="./index.html" class="header-link current-underline link">
+                Studio
+              </a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link link">
@@ -65,7 +67,9 @@
       <section class="hero-img">
         <div class="container">
           <h1 class="hero-text">Effective Solutions for Your Business</h1>
-          <button type="button" class="order-btn">Order Service</button>
+          <button type="button" class="order-btn" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="features-section">
@@ -412,5 +416,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close-modal" data-modal-close>
+          <svg width="8" height="8">
+            <use href="./images/symbol-defs.svg#icon-Vector"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
